tests/ui/errors/invalid_value.rs
use leptos_mview::component;

fn main() {
    component! {
        div a=a {}
    };
}