tests/ui/errors/invalid_value.stderr
error: invalid value: expected paren, block or literal
 --> tests/ui/errors/invalid_value.rs:5:15
  |
5 |         div a=a {}
  |               ^
